--- a/mcts_tic_tac_toe/mcts.ipynb
+++ b/mcts_tic_tac_toe/mcts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
     "            next_state, reward, done = env.move(self.state, action, self.player, turn)\n",
     "            next_possible_actions = self.possible_actions.copy()\n",
     "            next_possible_actions.remove(action)\n",
-    "            \n",
+    "\n",
     "            node = Node(self, next_possible_actions, self.turn, abs(1-playa))\n",
     "            if done or len(next_possible_actions) == 0:\n",
     "                node.terminal = True\n",
@@ -120,6 +120,12 @@
     "            self.fully_expanded = True\n",
     "\n",
     "    def choose_node(self, scalar):\n",
+    "        if self.player == self.turn:\n",
+    "            return self.choose_node_positive(scalar)\n",
+    "        else:\n",
+    "            return self.choose_node_negative(scalar)\n",
+    "\n",
+    "    def choose_node_positive(self, scalar):\n",
     "        max_ucb = -np.inf\n",
     "        max_node = []\n",
     "        ucbs = []\n",
@@ -136,6 +142,25 @@
     "                max_node.append(child)\n",
     "\n",
     "        return np.random.choice(max_node)\n",
+    "\n",
+    "    def choose_node_negative(self, scalar):\n",
+    "        max_ucb = np.inf\n",
+    "        max_node = []\n",
+    "        ucbs = []\n",
+    "\n",
+    "        for action in self.possible_actions:\n",
+    "            child = self.children[action]\n",
+    "            if child.visits > 0:\n",
+    "                ucb = -(child.value / child.visits) + scalar * math.sqrt(math.log(self.visits / child.visits))\n",
+    "            else:\n",
+    "                ucb = -np.inf\n",
+    "            ucbs.append(ucb)\n",
+    "            if ucb < max_ucb:\n",
+    "                max_ucb = ucb\n",
+    "                max_node.append(child)\n",
+    "\n",
+    "        return np.random.choice(max_node)\n",
+    "\n",
     "\n",
     "    def choose_action(self, scalar):\n",
     "        max_ucb = -np.inf\n",
@@ -233,12 +258,12 @@
     "\n",
     "\n",
     "        print(start_node.value, start_node.visits)\n",
-    "        return start_node.choose_action(1/math.sqrt(2))\n"
+    "        return start_node.choose_action(1/math.sqrt(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,28 +274,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "603 1000\n",
+      "823 1000\n",
       "alo\n",
-      "1\n",
-      "1 won!\n",
-      " 0 1 # \n",
-      " # 1 # \n",
-      " 0 1 # \n",
+      "None\n",
+      " # 0 1 \n",
+      " # # # \n",
+      " 1 # # \n",
       "\n",
-      "0 1000\n",
+      "969 1000\n",
       "alo\n",
-      "0\n",
-      "0 won!\n",
-      " 0 1 # \n",
-      " 0 1 # \n",
-      " 0 1 # \n",
+      "None\n",
+      " 0 0 1 \n",
+      " # # # \n",
+      " 1 # # \n",
       "\n"
      ]
     }
